--- a/addons/sourcemod/configs/weapons/weapons_schinese.cfg
+++ b/addons/sourcemod/configs/weapons/weapons_schinese.cfg
@@ -35,87 +35,87 @@
 		"index"		"852"
 		"classes"	"weapon_knife_widowmaker;"
 	}
-	"Moonrise"
+	"城里的月光"
 	{
 		"index"		"851"
 		"classes"	"weapon_ump45;"
 	}
-	"Incinegator"
+	"焚烬之鳄"
 	{
 		"index"		"850"
 		"classes"	"weapon_xm1014;"
 	}
-	"Off World"
+	"异星世界"
 	{
 		"index"		"849"
 		"classes"	"weapon_p90;"
 	}
-	"Verdigris"
+	"铜绿"
 	{
 		"index"		"848"
 		"classes"	"weapon_p250;"
 	}
-	"Mischief"
+	"恶作剧"
 	{
 		"index"		"847"
 		"classes"	"weapon_mp7;"
 	}
-	"Gauss"
+	"高斯"
 	{
 		"index"		"846"
 		"classes"	"weapon_mp5sd;"
 	}
-	"Momentum"
+	"动量"
 	{
 		"index"		"845"
 		"classes"	"weapon_aug;"
 	}
-	"Emperor"
+	"皇帝"
 	{
 		"index"		"844"
 		"classes"	"weapon_m4a1;"
 	}
-	"Skull Crusher"
+	"头骨粉碎者"
 	{
 		"index"		"843"
 		"classes"	"weapon_revolver;"
 	}
-	"Akoben"
+	"战吼斑纹"
 	{
 		"index"		"842"
 		"classes"	"weapon_galilar;"
 	}
-	"Light Rail"
+	"轻轨"
 	{
 		"index"		"841"
 		"classes"	"weapon_deagle;"
 	}
-	"Whitefish"
+	"白鲑鱼"
 	{
 		"index"		"840"
 		"classes"	"weapon_mac10;"
 	}
-	"Bamboozle"
+	"青竹伪装"
 	{
 		"index"		"839"
 		"classes"	"weapon_tec9;"
 	}
-	"Atheris"
+	"树蝰"
 	{
 		"index"		"838"
 		"classes"	"weapon_awp;"
 	}
-	"Angry Mob"
+	"怒氓"
 	{
 		"index"		"837"
 		"classes"	"weapon_fiveseven;"
 	}
-	"Uncharted"
+	"迷踪秘境"
 	{
 		"index"		"836"
 		"classes"	"weapon_ak47;"
 	}
-	"Crypsis"
+	"保护色"
 	{
 		"index"		"835"
 		"classes"	"weapon_famas;"
@@ -208,7 +208,7 @@
 	"夜色"
 	{
 		"index"		"735"
-		"classes"	"weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
+		"classes"	"weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;weapon_knife_css;"
 	}
 	"雅典娜之眼"
 	{
@@ -903,7 +903,7 @@
 	"自由之手"
 	{
 		"index"		"581"
-		"classes"	"weapon_knife_m9_bayonet;"
+		"classes"	"weapon_knife_m9_bayonet;weapon_m4a1;weapon_ak47"
 	}
 	"自由之手"
 	{
@@ -1913,7 +1913,7 @@
 	"多普勒 (Ruby)"
 	{
 		"index"		"415"
-		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
+		"classes"	"weapon_ak47;weapon_m4a1;weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
 	}
 	"外表生锈"
 	{
@@ -1923,7 +1923,7 @@
 	"渐变大理石"
 	{
 		"index"		"413"
-		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;"
+		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;weapon_ak47;weapon_m4a1"
 	}
 	"大马士革钢"
 	{
@@ -3083,7 +3083,7 @@
 	"枯焦之色"
 	{
 		"index"		"175"
-		"classes"	"weapon_p90;weapon_ump45;weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
+		"classes"	"weapon_p90;weapon_ump45;weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;weapon_knife_css;"
 	}
 	"*嘣*"
 	{
@@ -3198,7 +3198,7 @@
 	"都市伪装"
 	{
 		"index"		"143"
-		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
+		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;weapon_knife_css;"
 	}
 	"橘皮涂装"
 	{
@@ -3323,7 +3323,7 @@
 	"北方森林"
 	{
 		"index"		"77"
-		"classes"	"weapon_p250;weapon_m4a1_silencer;weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
+		"classes"	"weapon_p250;weapon_m4a1_silencer;weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;weapon_knife_css;"
 	}
 	"冬之森林"
 	{
@@ -3348,7 +3348,7 @@
 	"狩猎网格"
 	{
 		"index"		"72"
-		"classes"	"weapon_ak47;weapon_awp;weapon_g3sg1;weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
+		"classes"	"weapon_ak47;weapon_awp;weapon_g3sg1;weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;weapon_knife_css;"
 	}
 	"致命红蝎"
 	{
@@ -3383,12 +3383,12 @@
 	"屠夫"
 	{
 		"index"		"59"
-		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
+		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;weapon_knife_css;"
 	}
 	"雷击"
 	{
 		"index"		"51"
-		"classes"	"weapon_awp;"
+		"classes"	"weapon_awp;weapon_m4a1;wepon_ak47"
 	}
 	"黑龙纹身"
 	{
@@ -3408,17 +3408,17 @@
 	"表面淬火"
 	{
 		"index"		"44"
-		"classes"	"weapon_fiveseven;weapon_ak47;weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
+		"classes"	"weapon_fiveseven;weapon_ak47;weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;weapon_m4a1;weapon_awp;weapon_knife_css;"
 	}
 	"人工染色"
 	{
 		"index"		"43"
-		"classes"	"weapon_elite;weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
+		"classes"	"weapon_elite;weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;weapon_knife_css;"
 	}
 	"蓝钢"
 	{
 		"index"		"42"
-		"classes"	"weapon_xm1014;weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
+		"classes"	"weapon_xm1014;weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;weapon_knife_css;"
 	}
 	"镀铜"
 	{
@@ -3438,7 +3438,7 @@
 	"渐变之色"
 	{
 		"index"		"38"
-		"classes"	"weapon_glock;weapon_mac10;weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
+		"classes"	"weapon_glock;weapon_mac10;weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;weapon_knife_css;"
 	}
 	"炽烈之炎"
 	{
@@ -3533,7 +3533,7 @@
 	"深红之网"
 	{
 		"index"		"12"
-		"classes"	"weapon_cz75a;weapon_revolver;weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
+		"classes"	"weapon_cz75a;weapon_revolver;weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;weapon_knife_css;"
 	}
 	"死亡骷髅"
 	{
@@ -3563,7 +3563,7 @@
 	"森林 DDPAT"
 	{
 		"index"		"5"
-		"classes"	"weapon_sawedoff;weapon_mp7;weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
+		"classes"	"weapon_sawedoff;weapon_mp7;weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;weapon_knife_css;"
 	}
 	"红苹果"
 	{
@@ -3574,5 +3574,95 @@
 	{
 		"index"		"2"
 		"classes"	"weapon_glock;weapon_tec9;"
+	}
+	"X光"
+	{
+		"index"     "125"
+		"classes"   "weapon_p250;"
+	}
+	"精英1.6"
+	{
+	    "index"     "903"
+		"classes"   "weapon_elite"
+	}
+	"Decommissioned"
+	{
+	    "index"     "904"
+		"classes"   "weapon_famas;"
+	}
+	"Flash Out"
+	{
+	    "index"     "905"
+		"classes"   "weapon_tec9;"
+	}
+	"Agent"
+	{
+	    "index"     "915"
+		"classes"   "weapon_mp5sd;"
+	}
+	"Popdog"
+	{
+	    "index"     "909"
+		"classes"   "weapon_mag7;"
+	}
+	"Assault"
+	{
+	    "index"     "914"
+		"classes"   "weapon_scar20;"
+	}
+	"Classic Crate"
+	{
+	    "index"     "908"
+		"classes"   "weapon_mac10;"
+	}
+	"炼狱小镇"
+	{
+	    "index"     "907"
+		"classes"   "weapon_p250;"
+	}
+	"Plastique"
+	{
+	    "index"     "916"
+		"classes"   "weapon_ump45;"
+	}
+	"阿兹特克"
+	{
+	    "index"     "902"
+		"classes"   "weapon_m249;"
+	}
+	"Sacrifice"
+	{
+	    "index"     "918"
+		"classes"   "weapon_glock;"
+	}
+	"九头蛇"
+	{
+	    "index"     "910"
+		"classes"   "weapon_mp9;"
+	}
+	"Buddy"
+	{
+	    "index"     "906"
+		"classes"   "weapon_fiveseven;"
+	}
+	"Wildfire"
+	{
+	    "index"     "917"
+		"classes"   "weapon_awp;"
+	}
+	"Nostalgia"
+	{
+	    "index"     "911"
+		"classes"   "weapon_p90;"
+	}
+	"Commemoration"
+	{
+	    "index"     "919"
+		"classes"   "weapon_famas;"
+	}
+	"Death by Puppy"
+	{
+	    "index"     "913"
+		"classes"   "weapon_aug;"
 	}
 }
