--- a/addons/sourcemod/configs/weapons/weapons_schinese_pw.cfg
+++ b/addons/sourcemod/configs/weapons/weapons_schinese_pw.cfg
@@ -1,296 +1,296 @@
 "Skins"
 {
-	"Damascus Steel"
+	"大马士革钢"
 	{
 		"index"		"858"
 		"classes"	"weapon_knife_widowmaker;"
 	}
-	"Damascus Steel"
+	"大马士革钢"
 	{
 		"index"		"857"
 		"classes"	"weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;"
 	}
-	"Marble Fade"
+	"渐变大理石"
 	{
 		"index"		"856"
 		"classes"	"weapon_knife_widowmaker;"
 	}
-	"null (Phase 4)"
+	"多普勒 (Phase 4)"
 	{
 		"index"		"855"
 		"classes"	"weapon_knife_widowmaker;"
 	}
-	"null (Phase 3)"
+	"多普勒 (Phase 3)"
 	{
 		"index"		"854"
 		"classes"	"weapon_knife_widowmaker;"
 	}
-	"null (Phase 2)"
+	"多普勒 (Phase 2)"
 	{
 		"index"		"853"
 		"classes"	"weapon_knife_widowmaker;"
 	}
-	"null (Phase 1)"
+	"多普勒 (Phase 1)"
 	{
 		"index"		"852"
 		"classes"	"weapon_knife_widowmaker;"
 	}
-	"Moonrise"
+	"城里的月光"
 	{
 		"index"		"851"
 		"classes"	"weapon_ump45;"
 	}
-	"Incinegator"
+	"焚烬之鳄"
 	{
 		"index"		"850"
 		"classes"	"weapon_xm1014;"
 	}
-	"Off World"
+	"异星世界"
 	{
 		"index"		"849"
 		"classes"	"weapon_p90;"
 	}
-	"Verdigris"
+	"铜绿"
 	{
 		"index"		"848"
 		"classes"	"weapon_p250;"
 	}
-	"Mischief"
+	"恶作剧"
 	{
 		"index"		"847"
 		"classes"	"weapon_mp7;"
 	}
-	"Gauss"
+	"高斯"
 	{
 		"index"		"846"
 		"classes"	"weapon_mp5sd;"
 	}
-	"Momentum"
+	"动量"
 	{
 		"index"		"845"
 		"classes"	"weapon_aug;"
 	}
-	"Emperor"
+	"皇帝"
 	{
 		"index"		"844"
 		"classes"	"weapon_m4a1;"
 	}
-	"Skull Crusher"
+	"头骨粉碎者"
 	{
 		"index"		"843"
 		"classes"	"weapon_revolver;"
 	}
-	"Akoben"
+	"战吼斑纹"
 	{
 		"index"		"842"
 		"classes"	"weapon_galilar;"
 	}
-	"Light Rail"
+	"轻轨"
 	{
 		"index"		"841"
 		"classes"	"weapon_deagle;"
 	}
-	"Whitefish"
+	"白鲑鱼"
 	{
 		"index"		"840"
 		"classes"	"weapon_mac10;"
 	}
-	"Bamboozle"
+	"青竹伪装"
 	{
 		"index"		"839"
 		"classes"	"weapon_tec9;"
 	}
-	"Atheris"
+	"树蝰"
 	{
 		"index"		"838"
 		"classes"	"weapon_awp;"
 	}
-	"Angry Mob"
+	"怒氓"
 	{
 		"index"		"837"
 		"classes"	"weapon_fiveseven;"
 	}
-	"Uncharted"
+	"迷踪秘境"
 	{
 		"index"		"836"
 		"classes"	"weapon_ak47;"
 	}
-	"Crypsis"
+	"保护色"
 	{
 		"index"		"835"
 		"classes"	"weapon_famas;"
 	}
-	"Flashback"
+	"闪回"
 	{
 		"index"		"817"
 		"classes"	"weapon_usp_silencer;"
 	}
-	"Fubar"
+	"破铜烂铁"
 	{
 		"index"		"816"
 		"classes"	"weapon_tec9;"
 	}
-	"Danger Close"
+	"危险距离"
 	{
 		"index"		"815"
 		"classes"	"weapon_sg556;"
 	}
-	"Black Sand"
+	"黑砂"
 	{
 		"index"		"814"
 		"classes"	"weapon_sawedoff;"
 	}
-	"Nevermore"
+	"影魔"
 	{
 		"index"		"813"
 		"classes"	"weapon_p250;"
 	}
-	"Pipe Down"
+	"销声"
 	{
 		"index"		"812"
 		"classes"	"weapon_mac10;"
 	}
-	"Magnesium"
+	"镁元素"
 	{
 		"index"		"811"
 		"classes"	"weapon_m4a1;"
 	}
-	"Phosphor"
+	"磷光体"
 	{
 		"index"		"810"
 		"classes"	"weapon_mp5sd;"
 	}
-	"Wood Fired"
+	"灼木"
 	{
 		"index"		"809"
 		"classes"	"weapon_nova;"
 	}
-	"Oxide Blaze"
+	"锈蚀烈焰"
 	{
 		"index"		"808"
 		"classes"	"weapon_glock;"
 	}
-	"Signal"
+	"信号灯"
 	{
 		"index"		"807"
 		"classes"	"weapon_galilar;"
 	}
-	"Scavenger"
+	"净化者"
 	{
 		"index"		"806"
 		"classes"	"weapon_g3sg1;"
 	}
-	"Mecha Industries"
+	"机械工业"
 	{
 		"index"		"805"
 		"classes"	"weapon_deagle;"
 	}
-	"Modest Threat"
+	"中度威胁"
 	{
 		"index"		"804"
 		"classes"	"weapon_mp9;"
 	}
-	"Neo-Noir"
+	"黑色魅影"
 	{
 		"index"		"803"
 		"classes"	"weapon_awp;"
 	}
-	"Momentum"
+	"动量"
 	{
 		"index"		"802"
 		"classes"	"weapon_ump45;"
 	}
-	"Asiimov"
+	"二西莫夫"
 	{
 		"index"		"801"
 		"classes"	"weapon_ak47;"
 	}
-	"Night Stripe"
+	"夜色"
 	{
 		"index"		"735"
-		"classes"	"weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
+		"classes"	"weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;weapon_knife_css;"
 	}
-	"Eye of Athena"
+	"雅典娜之眼"
 	{
 		"index"		"723"
 		"classes"	"weapon_famas;"
 	}
-	"Snek-9"
+	"蛇-9"
 	{
 		"index"		"722"
 		"classes"	"weapon_tec9;"
 	}
-	"Survivalist"
+	"生存主义者"
 	{
 		"index"		"721"
 		"classes"	"weapon_revolver;"
 	}
-	"Devourer"
+	"吞噬"
 	{
 		"index"		"720"
 		"classes"	"weapon_sawedoff;"
 	}
-	"Powercore"
+	"权力之心"
 	{
 		"index"		"719"
 		"classes"	"weapon_mp7;"
 	}
-	"PAW"
+	"猫猫狗狗"
 	{
 		"index"		"718"
 		"classes"	"weapon_awp;"
 	}
-	"Traction"
+	"牵引力"
 	{
 		"index"		"717"
 		"classes"	"weapon_p90;"
 	}
-	"Toy Soldier"
+	"玩具士兵"
 	{
 		"index"		"716"
 		"classes"	"weapon_nova;"
 	}
-	"Capillary"
+	"毛细血管"
 	{
 		"index"		"715"
 		"classes"	"weapon_mp9;"
 	}
-	"Nightmare"
+	"梦魇"
 	{
 		"index"		"714"
 		"classes"	"weapon_m4a1_silencer;"
 	}
-	"Warhawk"
+	"战鹰"
 	{
 		"index"		"713"
 		"classes"	"weapon_glock;"
 	}
-	"High Seas"
+	"公海"
 	{
 		"index"		"712"
 		"classes"	"weapon_g3sg1;"
 	}
-	"Code Red"
+	"红色代号"
 	{
 		"index"		"711"
 		"classes"	"weapon_deagle;"
 	}
-	"Shred"
+	"碎片"
 	{
 		"index"		"710"
 		"classes"	"weapon_elite;"
 	}
-	"Eco"
+	"经济"
 	{
 		"index"		"709"
 		"classes"	"weapon_cz75a;"
 	}
-	"Amber Slipstream"
+	"琥珀冲流"
 	{
 		"index"		"708"
 		"classes"	"weapon_aug;"
 	}
-	"Neon Rider"
+	"霓虹骑士"
 	{
 		"index"		"707"
 		"classes"	"weapon_ak47;"
@@ -380,7 +380,7 @@
 		"index"		"690"
 		"classes"	"weapon_aug;"
 	}
-	"Lab Rats"
+	"小白鼠"
 	{
 		"index"		"800"
 		"classes"	"weapon_mp5sd;"
@@ -903,7 +903,7 @@
 	"自由之手"
 	{
 		"index"		"581"
-		"classes"	"weapon_knife_m9_bayonet;"
+		"classes"	"weapon_knife_m9_bayonet;weapon_m4a1;weapon_ak47"
 	}
 	"自由之手"
 	{
@@ -1105,7 +1105,7 @@
 		"index"		"541"
 		"classes"	"weapon_aug;"
 	}
-	"High Beam"
+	"远光灯"
 	{
 		"index"		"799"
 		"classes"	"weapon_glock;"
@@ -1115,32 +1115,32 @@
 		"index"		"798"
 		"classes"	"weapon_revolver;"
 	}
-	"Brake Light"
+	"刹车灯"
 	{
 		"index"		"797"
 		"classes"	"weapon_sawedoff;"
 	}
-	"Check Engine"
+	"引擎故障灯"
 	{
 		"index"		"796"
 		"classes"	"weapon_usp_silencer;"
 	}
-	"Safety Net"
+	"安全网"
 	{
 		"index"		"795"
 		"classes"	"weapon_ak47;"
 	}
-	"Sweeper"
+	"扫频仪"
 	{
 		"index"		"794"
 		"classes"	"weapon_aug;"
 	}
-	"Converter"
+	"变频器"
 	{
 		"index"		"793"
 		"classes"	"weapon_m4a1;"
 	}
-	"Slide"
+	"滑移"
 	{
 		"index"		"755"
 		"classes"	"weapon_mp9;"
@@ -1150,127 +1150,127 @@
 		"index"		"754"
 		"classes"	"weapon_mag7;"
 	}
-	"Dirt Drop"
+	"越野"
 	{
 		"index"		"753"
 		"classes"	"weapon_mp5sd;"
 	}
-	"Fade"
+	"渐变之色"
 	{
 		"index"		"752"
 		"classes"	"weapon_mp7;"
 	}
-	"Hand Brake"
+	"手刹"
 	{
 		"index"		"751"
 		"classes"	"weapon_ssg08;"
 	}
-	"Integrale"
+	"意式拉力"
 	{
 		"index"		"750"
 		"classes"	"weapon_sg556;"
 	}
-	"Vino Primo"
+	"葡萄酒"
 	{
 		"index"		"749"
 		"classes"	"weapon_p250;"
 	}
-	"Calf Skin"
+	"小牛皮"
 	{
 		"index"		"748"
 		"classes"	"weapon_mac10;"
 	}
-	"Twin Turbo"
+	"双涡轮"
 	{
 		"index"		"747"
 		"classes"	"weapon_elite;"
 	}
-	"Control Panel"
+	"控制台"
 	{
 		"index"		"792"
 		"classes"	"weapon_m4a1_silencer;"
 	}
-	"Remote Control"
+	"遥控"
 	{
 		"index"		"791"
 		"classes"	"weapon_tec9;"
 	}
-	"Cold Fusion"
+	"冰核聚变"
 	{
 		"index"		"790"
 		"classes"	"weapon_galilar;"
 	}
-	"Nuclear Garden"
+	"核子花园"
 	{
 		"index"		"789"
 		"classes"	"weapon_glock;"
 	}
-	"Acheron"
+	"冥界之河"
 	{
 		"index"		"788"
 		"classes"	"weapon_awp;"
 	}
-	"Core Breach"
+	"核芯破裂"
 	{
 		"index"		"787"
 		"classes"	"weapon_mag7;"
 	}
-	"Exchanger"
+	"交换机"
 	{
 		"index"		"786"
 		"classes"	"weapon_p250;"
 	}
-	"Mandrel"
+	"芯轴"
 	{
 		"index"		"785"
 		"classes"	"weapon_nova;"
 	}
-	"Coolant"
+	"冷却剂"
 	{
 		"index"		"784"
 		"classes"	"weapon_fiveseven;"
 	}
-	"Bulkhead"
+	"舱壁"
 	{
 		"index"		"783"
 		"classes"	"weapon_negev;"
 	}
-	"Motherboard"
+	"主板"
 	{
 		"index"		"782"
 		"classes"	"weapon_mp7;"
 	}
-	"Co-Processor"
+	"协处理器"
 	{
 		"index"		"781"
 		"classes"	"weapon_mp5sd;"
 	}
-	"Mainframe"
+	"主机"
 	{
 		"index"		"780"
 		"classes"	"weapon_m4a1;"
 	}
-	"Random Access"
+	"随机存取"
 	{
 		"index"		"779"
 		"classes"	"weapon_aug;"
 	}
-	"Facility Dark"
+	"设施系列·深色图"
 	{
 		"index"		"778"
 		"classes"	"weapon_ump45;"
 	}
-	"Facility Draft"
+	"设施系列·草图"
 	{
 		"index"		"777"
 		"classes"	"weapon_p250;"
 	}
-	"Facility Negative"
+	"设施系列·底片图"
 	{
 		"index"		"776"
 		"classes"	"weapon_p90;"
 	}
-	"Facility Sketch"
+	"设施系列·速写图"
 	{
 		"index"		"775"
 		"classes"	"weapon_bizon;"
@@ -1913,7 +1913,7 @@
 	"多普勒 (Ruby)"
 	{
 		"index"		"415"
-		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
+		"classes"	"weapon_ak47;weapon_m4a1;weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
 	}
 	"外表生锈"
 	{
@@ -1923,7 +1923,7 @@
 	"渐变大理石"
 	{
 		"index"		"413"
-		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;"
+		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;weapon_ak47;weapon_m4a1"
 	}
 	"大马士革钢"
 	{
@@ -3083,7 +3083,7 @@
 	"枯焦之色"
 	{
 		"index"		"175"
-		"classes"	"weapon_p90;weapon_ump45;weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
+		"classes"	"weapon_p90;weapon_ump45;weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;weapon_knife_css;"
 	}
 	"*嘣*"
 	{
@@ -3198,7 +3198,7 @@
 	"都市伪装"
 	{
 		"index"		"143"
-		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
+		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;weapon_knife_css;"
 	}
 	"橘皮涂装"
 	{
@@ -3323,7 +3323,7 @@
 	"北方森林"
 	{
 		"index"		"77"
-		"classes"	"weapon_p250;weapon_m4a1_silencer;weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
+		"classes"	"weapon_p250;weapon_m4a1_silencer;weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;weapon_knife_css;"
 	}
 	"冬之森林"
 	{
@@ -3348,7 +3348,7 @@
 	"狩猎网格"
 	{
 		"index"		"72"
-		"classes"	"weapon_ak47;weapon_awp;weapon_g3sg1;weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
+		"classes"	"weapon_ak47;weapon_awp;weapon_g3sg1;weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;weapon_knife_css;"
 	}
 	"致命红蝎"
 	{
@@ -3383,12 +3383,12 @@
 	"屠夫"
 	{
 		"index"		"59"
-		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
+		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;weapon_knife_css;"
 	}
 	"雷击"
 	{
 		"index"		"51"
-		"classes"	"weapon_awp;"
+		"classes"	"weapon_awp;weapon_m4a1;wepon_ak47"
 	}
 	"黑龙纹身"
 	{
@@ -3408,17 +3408,17 @@
 	"表面淬火"
 	{
 		"index"		"44"
-		"classes"	"weapon_fiveseven;weapon_ak47;weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
+		"classes"	"weapon_fiveseven;weapon_ak47;weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;weapon_m4a1;weapon_awp;weapon_knife_css;"
 	}
 	"人工染色"
 	{
 		"index"		"43"
-		"classes"	"weapon_elite;weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
+		"classes"	"weapon_elite;weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;weapon_knife_css;"
 	}
 	"蓝钢"
 	{
 		"index"		"42"
-		"classes"	"weapon_xm1014;weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
+		"classes"	"weapon_xm1014;weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;weapon_knife_css;"
 	}
 	"镀铜"
 	{
@@ -3438,7 +3438,7 @@
 	"渐变之色"
 	{
 		"index"		"38"
-		"classes"	"weapon_glock;weapon_mac10;weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
+		"classes"	"weapon_glock;weapon_mac10;weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;weapon_knife_css;"
 	}
 	"炽烈之炎"
 	{
@@ -3533,7 +3533,7 @@
 	"深红之网"
 	{
 		"index"		"12"
-		"classes"	"weapon_cz75a;weapon_revolver;weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
+		"classes"	"weapon_cz75a;weapon_revolver;weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;weapon_knife_css;"
 	}
 	"死亡骷髅"
 	{
@@ -3563,7 +3563,7 @@
 	"森林 DDPAT"
 	{
 		"index"		"5"
-		"classes"	"weapon_sawedoff;weapon_mp7;weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
+		"classes"	"weapon_sawedoff;weapon_mp7;weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;weapon_knife_css;"
 	}
 	"红苹果"
 	{
@@ -3574,5 +3574,95 @@
 	{
 		"index"		"2"
 		"classes"	"weapon_glock;weapon_tec9;"
+	}
+	"X光"
+	{
+		"index"     "125"
+		"classes"   "weapon_p250;"
+	}
+	"精英1.6"
+	{
+	    "index"     "903"
+		"classes"   "weapon_elite"
+	}
+	"Decommissioned"
+	{
+	    "index"     "904"
+		"classes"   "weapon_famas;"
+	}
+	"Flash Out"
+	{
+	    "index"     "905"
+		"classes"   "weapon_tec9;"
+	}
+	"Agent"
+	{
+	    "index"     "915"
+		"classes"   "weapon_mp5sd;"
+	}
+	"Popdog"
+	{
+	    "index"     "909"
+		"classes"   "weapon_mag7;"
+	}
+	"Assault"
+	{
+	    "index"     "914"
+		"classes"   "weapon_scar20;"
+	}
+	"Classic Crate"
+	{
+	    "index"     "908"
+		"classes"   "weapon_mac10;"
+	}
+	"炼狱小镇"
+	{
+	    "index"     "907"
+		"classes"   "weapon_p250;"
+	}
+	"Plastique"
+	{
+	    "index"     "916"
+		"classes"   "weapon_ump45;"
+	}
+	"阿兹特克"
+	{
+	    "index"     "902"
+		"classes"   "weapon_m249;"
+	}
+	"Sacrifice"
+	{
+	    "index"     "918"
+		"classes"   "weapon_glock;"
+	}
+	"九头蛇"
+	{
+	    "index"     "910"
+		"classes"   "weapon_mp9;"
+	}
+	"Buddy"
+	{
+	    "index"     "906"
+		"classes"   "weapon_fiveseven;"
+	}
+	"Wildfire"
+	{
+	    "index"     "917"
+		"classes"   "weapon_awp;"
+	}
+	"Nostalgia"
+	{
+	    "index"     "911"
+		"classes"   "weapon_p90;"
+	}
+	"Commemoration"
+	{
+	    "index"     "919"
+		"classes"   "weapon_famas;"
+	}
+	"Death by Puppy"
+	{
+	    "index"     "913"
+		"classes"   "weapon_aug;"
 	}
 }
