--- a/cfg/sourcemod/weapons.cfg
+++ b/cfg/sourcemod/weapons.cfg
@@ -31,6 +31,11 @@ sm_weapons_enable_overwrite "0"
 // Default: "1"
 sm_weapons_enable_stattrak "1"
 
+// Enable/Disable All Skins options
+// -
+// Default: "1"
+sm_weapons_enable_allskins "1"
+
 // Enable/Disable Seed options
 // -
 // Default: "1"
